[gd_scene load_steps=5 format=2]

[ext_resource path="res://scenes/GameOver.gd" type="Script" id=1]
[ext_resource path="res://assets/GUI/RammettoOne-Regular.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://assets/GUI/btn_restart.png" type="Texture" id=3]

[sub_resource type="DynamicFont" id=1]

size = 40
use_mipmaps = false
use_filter = false
font_data = ExtResource( 2 )
_sections_unfolded = [ "Font", "Settings" ]

[node name="GameOver" type="CanvasLayer"]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
transform = Transform2D( 1, 0, 0, 1, 0, 0 )
script = ExtResource( 1 )

[node name="PanelContainer" type="PanelContainer" parent="." index="0"]

anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -162.0
margin_top = -55.5
margin_right = 162.0
margin_bottom = 55.5
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1

[node name="Message" type="Label" parent="PanelContainer" index="0"]

anchor_left = 0.0
anchor_top = 0.0
anchor_right = 0.0
anchor_bottom = 0.0
margin_left = 7.0
margin_top = 21.0
margin_right = 317.0
margin_bottom = 89.0
rect_pivot_offset = Vector2( 0, 0 )
mouse_filter = 2
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 4
custom_fonts/font = SubResource( 1 )
text = "Game Over"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
_sections_unfolded = [ "custom_fonts" ]

[node name="RestartButton" type="TextureButton" parent="." index="1"]

anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -55.0
margin_top = -177.0
margin_right = 55.0
margin_bottom = -63.0
rect_pivot_offset = Vector2( 0, 0 )
focus_mode = 2
mouse_filter = 0
mouse_default_cursor_shape = 0
size_flags_horizontal = 1
size_flags_vertical = 1
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
group = null
texture_normal = ExtResource( 3 )
_sections_unfolded = [ "Textures", "custom_fonts" ]

[node name="RestartTimer" type="Timer" parent="." index="2"]

process_mode = 1
wait_time = 3.0
one_shot = true
autostart = false

[connection signal="pressed" from="RestartButton" to="." method="_on_Button_pressed"]

[connection signal="timeout" from="RestartTimer" to="." method="_on_RestartTimer_timeout"]


